changed base + homepage in v-config and pack.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dxncrv.github.io/react-portfolio",
+  "homepage": "https://dxncrv.com/",
   "name": "portfolio-app",
   "private": true,
   "version": "0.0.0",
