back to gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dxncrv.com/",
+  "homepage": "https://dxncrv.github.io/react-portfolio",
   "name": "portfolio-app",
   "private": true,
   "version": "0.0.0",
